--- a/source/work/ignite.html.haml
+++ b/source/work/ignite.html.haml
@@ -1,3 +1,6 @@
+- content_for :nav_top do
+  = partial "shared/arrow_nav"
+
 %section.ignite.m-project-layout
   .wrapper.m-page.scene_element.scene_element--fadeinright
     %article.intro
