--- a/source/assets/stylesheets/pages/_resume.sass
+++ b/source/assets/stylesheets/pages/_resume.sass
@@ -45,7 +45,8 @@ section.m-resume-layout
       width: 100%
       padding-top: 0
       position: fixed
-      top: 20%
+      top: 50%
+      transform: translateY(-10%)
       right: 0
       bottom: 0
       left: 5%
